--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
 
 
     </string-array>
+
+    <string-array name="AssignTeams">
+        <item>Team 1</item>
+        <item>Team 2</item>
+        <item>Team 3</item>
+    </string-array>
 </resources>
